--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,72 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-677.8KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇷🇺 俄罗斯联邦-328.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇰🇷 韩国-2.19MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-394.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: ppy-giacn2.0098dns02in.work, port: 26003, type: vmess, uuid: 1c7824b3-1aa0-3e5a-88e8-d3f0426ab21e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-312.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇷🇺 俄罗斯联邦-314.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-677.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-314.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-677.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-314.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-677.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-314.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-677.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-677.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-314.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-677.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-314.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-677.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-314.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-677.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-328.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-314.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
