--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.78MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-871.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-838.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇦🇺 澳大利亚-919.8KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.33MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-315.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 🇫🇷 法国-1.71MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇻🇳 越南-8.57MB/s(Youtube:不良林), server: 103.74.105.118, port: 80, type: vmess, uuid: 23734aa1-5de0-465f-9662-4f0239b31d9f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.74.105.118}}
+  - {name: 🇨🇳 中国-2.20MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-871.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-838.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-871.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-838.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-871.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-838.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-871.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-838.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-871.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-838.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-871.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-838.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-871.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-838.4KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-919.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-315.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.71MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
