--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-8.57MB/s(Youtube:不良林), server: 103.74.105.118, port: 80, type: vmess, uuid: 23734aa1-5de0-465f-9662-4f0239b31d9f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.74.105.118}}
-  - {name: 🇨🇳 中国-2.20MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 台湾-810.6KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇬🇧 英国-1.60MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.89MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-467.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇷🇺 俄罗斯联邦-479.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇷🇺 俄罗斯联邦-336.8KB/s(Youtube:不良林), server: 213.183.53.177, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇷🇺 俄罗斯联邦-421.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇷🇺 俄罗斯联邦-390.6KB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-685.8KB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: iepl.rookiecloud.info, port: 50497, type: ss, cipher: aes-128-gcm, password: 674f2f62-cb5d-4e25-8aa8-839e1a15c15c}
+  - {name: 🇸🇬 新加坡-311.3KB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-810.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-467.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-479.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-421.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-311.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-810.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-467.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-479.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-421.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-311.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-810.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-467.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-479.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-421.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-311.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-810.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-810.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-467.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-479.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-421.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-311.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-810.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-467.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-479.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-421.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-311.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-810.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-467.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-479.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-421.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-311.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-8.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-810.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-467.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-479.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-336.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-421.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-390.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-685.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-311.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
